--- a/farmacias.html
+++ b/farmacias.html
@@ -66,21 +66,25 @@
       <div class="justify-content-center align-items-center row" >
           <div class="row w-100">
           <!--Farmácia de Serviço-->
- <!--Farmácia Espinho Petrucci-->
+ <!--Farmácia Avenida-->
  <div class="col-md-6 mb-5">
   <div class="card h-100">
     <div class="card-body">
-      <h3 class="card-title">Farmácia Espinho Petrucci</h3>
+      <h3 class="card-title">Farmácia Avenida</h3>
       <p class="card-text">
           </p><ul>
-            <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232622240"> 232622240</a></li>
-            <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/FarmaciaEspinhoPetrucci/"> Facebook</a></li>
-              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/W5KYGHKMnvCutCRm6"> Mangualde</a></li>
+            <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232617390"> 232617390</a></li>
+            <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/F.Avenida"> Facebook</a></li>
+              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/B8eFzYrdgawsUE5E6"> Mangualde</a></li>
               <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                   <ul> 
-                    <li><b>Seg-Sex:</b> 8h30m - 20h</li>
-                    <li><b>Sáb:</b> 8h30m - 19h</li>
+                      <li><b>Seg-Sex:</b> 8h30m - 20h</li>
+                      <li><b>Sáb-Dom:</b> 9h - 19h</li> 
                   </ul>
+              </li>
+              <li><b>Entregas ao Domicílio através de: </b>
+                  <a href="mailto:farmaciaavenidamangualde@gmail.com" style="font-size: 14px;"> farmaciaavenidamangualde@gmail.com</a>
+                  ou telefone
               </li>
           </ul>
       <p></p>
@@ -110,7 +114,7 @@
     </div>
      
     <!--Fim da row-->
-      </div></div> <h6 style="text-align: center;"><b>Atualizado a 18/04/2020 10:00</b></h6>
+      </div></div> <h6 style="text-align: center;"><b>Atualizado a 19/04/2020 10:00</b></h6>
       <!--Farmácias Mangualde-->
       <h2 style="font-weight: bold;">Mangualde</h2>
       <hr>
