--- a/farmacias.html
+++ b/farmacias.html
@@ -66,19 +66,20 @@
       <div class="justify-content-center align-items-center row" >
           <div class="row w-100">
           <!--Farmácia de Serviço-->
-    <!--Farmácia Feliz-->
-    <div class="col-md-6 mb-5">
+     <!--Farmácia Albuquerque-->
+     <div class="col-md-6 mb-5">
       <div class="card h-100">
         <div class="card-body">
-          <h3 class="card-title">Farmácia Feliz</h3>
+          <h3 class="card-title">Farmácia Albuquerque</h3>
           <p class="card-text">
               </p><ul>
-                <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232622238"> 232622238</a></li>
-                <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/Feliz.Farmacia"> Facebook</a></li>
-                  <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/xQPTNjQjvmhdUztLA"> Mangualde</a></li>
+                <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232611952"> 232611952</a></li>
+                <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/pages/category/Pharmacy---Drugstore/Farm%C3%A1cia-Albuquerque-468025329935643/"> Facebook</a></li>
+                  <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/nwQSvem81ATRpbQQ9"> Mangualde</a></li>
                   <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                       <ul> 
-                          <li><b>Seg-Dom:</b> 8h30m - 20h</li>
+                          <li><b>Seg-Sex:</b> 8h30m - 20h</li>
+                          <li><b>Sáb:</b> 8h30m - 19h</li>
                       </ul>
                   </li>
               </ul>
