--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
   <div class="col-md-12 mb-5">
     <div class="card h-100">
       <div class="card-body bg-danger">
-        <h4 class="card-title" style="font-weight: bold; color:#ffffff; text-align: center;">Número de casos no Concelho de Mangualde <i class="fas fa-clinic-medical" aria-hidden="true"></i></h4>
-        <p class="card-text" style="text-align: center; color:#ffffff; font-size:30px;"><b>38</b></p>
+        <h4 class="card-title" style="font-weight: bold; color:#ffffff; text-align: center;">Número de casos ativos no Concelho de Mangualde <i class="fas fa-clinic-medical" aria-hidden="true"></i></h4>
+        <p class="card-text" style="text-align: center; color:#ffffff; font-size:30px;"><b>31</b></p>
       </div>
     </div>
   </div>
