--- a/index.html
+++ b/index.html
@@ -62,7 +62,17 @@
     </div>
   </div>
   -->
- 
+      <div class="container" style="margin-top: 90px;">
+<img class="image" src="mangualde.jpg" style="margin-bottom:20px; width:100%; ">
+<div class=" justify-content-center align-items-center row">
+  <div class="col-md-12 mb-5">
+    <div class="card h-100">
+      <div class="card-body bg-warning">
+        <h4 class="card-title" style="font-weight: bold; color:#ffffff; text-align: center;">Devido ao fim do estado de confinamento, a maioria dos serviços funciona nos seus horários habituais, pelo que este website deixará de ser atualizado <i class="fas fa-clinic-medical" aria-hidden="true"></i></h4>
+      </div>
+    </div>
+  </div>
+</div>
       <div class="container" style="margin-top: 90px;">
 <img class="image" src="mangualde.jpg" style="margin-bottom:20px; width:100%; ">
 <div class=" justify-content-center align-items-center row">
