--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <img class="image" src="mangualde.jpg" style="margin-bottom:20px; width:100%; ">    
 <div class=" justify-content-center align-items-center row">
   <div class="col-md-12 mb-5">
-    <div class="card h-100">
+    <div class="card h-100 mb-5">
       <div class="card-body bg-warning">
         <h4 class="card-title" style="font-weight: bold; color:#ffffff; text-align: center;">Devido ao fim do estado de confiamento, a maioria dos serviços funciona em horário habitual, pelo que este website deixará de ser atualizado <i class="fas fa-clinic-medical" aria-hidden="true"></i></h4>
       </div>
