--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <div class="col-md-12 mb-5">
     <div class="card h-100">
       <div class="card-body bg-warning mb-5">
-        <h4 class="card-title" style="font-weight: bold; color:#ffffff; text-align: center;">Devido ao fim do estado de confiamento, a maioria dos serviços funciona em horário habitual, pelo que este website deixará de ser atualizado <i class="fas fa-clinic-medical" aria-hidden="true"></i></h4>
+        <h4 class="card-title" style="font-weight: bold; color:#ffffff; text-align: center;">Devido ao fim do estado de confinamento, a maioria dos serviços funciona em horário habitual, pelo que este website deixará de ser atualizado <i class="fas fa-clinic-medical" aria-hidden="true"></i></h4>
       </div>
       <div class="card-body bg-danger">
         <h4 class="card-title" style="font-weight: bold; color:#ffffff; text-align: center;">Número de casos ativos no Concelho de Mangualde <i class="fas fa-clinic-medical" aria-hidden="true"></i></h4>
